--- a/public/embed-en.html
+++ b/public/embed-en.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Studio Availability Calendar</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta 
+      name="viewport" 
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" 
+    />
     <link rel="stylesheet" href="embed.css" />
   </head>
   <body>
